gender picker added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,9 @@
     <string name="hint_email">Email</string>
     <string name="hint_city">City</string>
     <string name="hint_about">About yourself</string>
+    <string name="hint_gender">Gender</string>
+    <string name="hint_male">Male</string>
+    <string name="hint_female">Female</string>
 
     <!--TODO: Personal Information-->
     <string name="user_profile_personal_info">Personal Info</string>
@@ -60,6 +63,7 @@
     <string name="add_ad_title">Post Something</string>
     <string name="hint_birthday">Birthday</string>
     <string name="picker_age_title">What is your age?</string>
+    <string name="gen_loading">Loading</string>
 
 
 </resources>
